# yatotem2scdl

./: .envrc  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish-test-pypi.yml
src/yatotem2scdl/: conversion.py  convert.py  exceptions.py  main.py
tests/: data.py  test_cas_alamarge.py  test_conversions.py  test_convert.py  test_etape_budgetaire.py  test_extraction_metadata.py  test_totem_budget_metadata.py
tests/data_alamarge/: mauvais_totem.xml
tests/data_extract_metadata/: totem_cfu_valide.xml  totem_mauvais_siret.xml  totem_mauvaise_annee.xml  totem_mauvaise_etape.xml  totem_mauvaise_nomenclature.xml
tests/exemples/BP2022_TRANSPORT/: expected.csv  totem.xml
tests/exemples/CA_2021_D56_BUDGET_PRINCIPAL/: expected.csv
tests/exemples/DOCBUDG-21560046100010-056025-CA-2021-01032022000000/: expected.csv  totem.xml
tests/exemples/DOCBUDG-21560046100010-056025-DM2-2021-25112021000000/: expected.csv  totem.xml
tests/exemples/DOCBUDG-21560046100010-056025-DM3-2021-17122021000000/: expected.csv  totem.xml
tests/exemples/DOCBUDG-21560046100085-056025-BP-2022-07042022000000/: expected.csv  totem.xml
tests/exemples/DOCBUDG-21560046100085-056025-CA-2021-01032022000000/: expected.csv  totem.xml
tests/exemples/DOCBUDG-21560046100085-056025-DM1-2022-05072022000000/: expected.csv  totem.xml
tests/exemples/DOCBUDG-21560134500014-CFU-BP-2023/: expected.csv  totem.xml
tests/exemples/budget-crach-001/: expected.csv  totem.xml
tests/exemples/budget-crach-001-xslt-custom/: convert-options.json
(+38 files in other folders)
